--- a/Avito.ipynb
+++ b/Avito.ipynb
@@ -78,6 +78,9 @@
    },
    "outputs": [],
    "source": [
+    "def some_func():\n",
+    "    pass\n",
+    "\n",
     "while count <= 50:\n",
     "    url = 'https://www.avito.ru/perm/kvartiry/prodam/vtorichka-ASgBAgICAkSSA8YQ5geMUg?context=H4sIAAAAAAAA_0q0MrSqLraysFJKK8rPDUhMT1WyLrYyNLNSKk5NLErOcMsvyg3PTElPLVGyrgUEAAD__xf8iH4tAAAA&p=' + str(count)\n",
     "    print(url)\n",
