--- a/Parsing and create df.ipynb
+++ b/Parsing and create df.ipynb
@@ -41,9 +41,7 @@
     "from hyper.contrib import HTTP20Adapter # Обход ошибки 403\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import numpy as np"
    ]
   },
   {
