Update FE and ML.ipynb

--- a/FE and ML.ipynb
+++ b/FE and ML.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e2649786",
+   "metadata": {},
+   "source": [
+    "## *Этап - Feature engineering и построение модели*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e11e4f8d",
    "metadata": {},
    "outputs": [],
@@ -15,146 +23,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "18005dc6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('database.csv')"
+    "df = pd.read_csv('database.csv')\n",
+    "df = df.drop(columns='Unnamed: 0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4419e251",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Rooms</th>\n",
-       "      <th>Area</th>\n",
-       "      <th>Floor</th>\n",
-       "      <th>Max_house_floor</th>\n",
-       "      <th>balcony\\loggia</th>\n",
-       "      <th>Bathroom</th>\n",
-       "      <th>Year built</th>\n",
-       "      <th>Link</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>4250000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>40</td>\n",
-       "      <td>13</td>\n",
-       "      <td>25</td>\n",
-       "      <td>балкон</td>\n",
-       "      <td>совмещенный</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>https://www.avito.ru/perm/kvartiry/1-k._kvarti...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4000000</td>\n",
-       "      <td>3</td>\n",
-       "      <td>61.7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>балкон</td>\n",
-       "      <td>раздельный</td>\n",
-       "      <td>1977.0</td>\n",
-       "      <td>https://www.avito.ru/perm/kvartiry/3-k._kvarti...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2950000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>44</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "      <td>балкон</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.avito.ru/perm/kvartiry/2-k._kvarti...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6990000</td>\n",
-       "      <td>3</td>\n",
-       "      <td>67.7</td>\n",
-       "      <td>5</td>\n",
-       "      <td>16</td>\n",
-       "      <td>лоджия</td>\n",
-       "      <td>раздельный</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.avito.ru/perm/kvartiry/3-k._kvarti...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>6990000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>44.9</td>\n",
-       "      <td>16</td>\n",
-       "      <td>25</td>\n",
-       "      <td>балкон</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.avito.ru/perm/kvartiry/2-k._kvarti...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0    Price  Rooms  Area  Floor  Max_house_floor balcony\\loggia  \\\n",
-       "0           0  4250000      1    40     13               25         балкон   \n",
-       "1           1  4000000      3  61.7      3                5         балкон   \n",
-       "2           2  2950000      2    44      9                9         балкон   \n",
-       "3           3  6990000      3  67.7      5               16         лоджия   \n",
-       "4           4  6990000      2  44.9     16               25         балкон   \n",
-       "\n",
-       "      Bathroom  Year built                                               Link  \n",
-       "0  совмещенный      2019.0  https://www.avito.ru/perm/kvartiry/1-k._kvarti...  \n",
-       "1   раздельный      1977.0  https://www.avito.ru/perm/kvartiry/3-k._kvarti...  \n",
-       "2          NaN         NaN  https://www.avito.ru/perm/kvartiry/2-k._kvarti...  \n",
-       "3   раздельный         NaN  https://www.avito.ru/perm/kvartiry/3-k._kvarti...  \n",
-       "4          NaN         NaN  https://www.avito.ru/perm/kvartiry/2-k._kvarti...  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c930aad",
+   "metadata": {},
+   "source": [
+    "### Приведение признаков к соответствующему типу данных"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5700ae6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15dabb14",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df.astype({'Price': 'int64'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d24429b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indx = []\n",
+    "for i in range(len(df.Price)):\n",
+    "    try:\n",
+    "        int(df.Price[i])\n",
+    "    except:\n",
+    "        indx.append(i)\n",
+    "df.iloc[indx]        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03292cff",
+   "metadata": {},
+   "source": [
+    "Ссылки на уже не существующие аукционы. Не буду их учитывать и дропну"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4fe2104",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(indx, axis=0)\n",
+    "df = df.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5c48915",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.astype({'Price': 'int64'})\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f8072f6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df.astype({'Area': 'float64'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cb1cd20",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "indx = []\n",
+    "for i in range(len(df.Area)):\n",
+    "    try:\n",
+    "        float(df.Area[i])\n",
+    "    except:\n",
+    "        indx.append(i)\n",
+    "df.iloc[indx]        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "637592ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(indx, axis=0)\n",
+    "df = df.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e69ad34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.astype({'Area': 'float64'})\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0da9928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   }
  ],
