--- a/tg-bot.ipynb
+++ b/tg-bot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "id": "611542ac",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "id": "43d0acb4",
    "metadata": {},
    "outputs": [],
@@ -25,15 +25,17 @@
     "    token = f.readline()\n",
     "bot = telebot.TeleBot(token)\n",
     "\n",
-    "with open('model.pkl', 'rb') as f:\n",
-    "    clf = pickle.load(f)\n",
+    "with open('model_price.pkl', 'rb') as f:\n",
+    "    model_price = pickle.load(f)\n",
+    "with open('model_links.pkl', 'rb') as f:\n",
+    "    model_links = pickle.load(f)\n",
     "\n",
-    "df = pd.read_csv('results.csv', index_col=0)"
+    "df = pd.read_csv('df.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 52,
    "id": "6994db30",
    "metadata": {},
    "outputs": [],
@@ -47,8 +49,6 @@
     "        self.square = None\n",
     "        self.floor = None\n",
     "        self.max_floor = None\n",
-    "        self.balcony = None\n",
-    "        self.bathroom = None\n",
     "        self.year = None\n",
     "        \n",
     "@bot.message_handler(commands=['help', 'start'])\n",
@@ -60,11 +60,9 @@
     "Здравствуйте! Я - бот, который подскажет цену на вашу квартиру в г. Пермь и отправит ссылки на похожие варинты квартир.\n",
     "Мне будут необходимы следующие данные:\n",
     "- количество комнат\n",
-    "- метраж квартиры\n",
+    "- площадь квартиры\n",
     "- этаж\n",
     "- этажность дома\n",
-    "- балкон или лоджия\n",
-    "- раздельный или совмещенный санузел\n",
     "- год постройки дома.\n",
     "\"\"\", reply_markup=markup)\n",
     "    bot.register_next_step_handler(msg, first_step)\n",
@@ -117,12 +115,12 @@
     "            return\n",
     "        estate = user_dict[chat_id]\n",
     "        estate.floor = floor\n",
-    "        msg = bot.reply_to(message, 'Скольки этажный дом?')\n",
-    "        bot.register_next_step_handler(msg, process_balcony_step)\n",
+    "        msg = bot.reply_to(message, 'Сколько этажей дом?')\n",
+    "        bot.register_next_step_handler(msg, process_year_step)\n",
     "    except Exception as e:\n",
     "        bot.reply_to(message, 'Упс!')\n",
     "        \n",
-    "def process_balcony_step(message):\n",
+    "def process_year_step(message):\n",
     "    try:\n",
     "        chat_id = message.chat.id\n",
     "        max_floor = message.text\n",
@@ -132,40 +130,6 @@
     "            return\n",
     "        estate = user_dict[chat_id]\n",
     "        estate.max_floor = max_floor\n",
-    "        markup = types.ReplyKeyboardMarkup(one_time_keyboard=True)\n",
-    "        markup.add('балкон', 'лоджия')\n",
-    "        msg = bot.reply_to(message, 'Какая терраса?', reply_markup=markup)\n",
-    "        bot.register_next_step_handler(msg, process_bathroom_step)\n",
-    "    except Exception as e:\n",
-    "        bot.reply_to(message, 'Упс!')\n",
-    "\n",
-    "\n",
-    "def process_bathroom_step(message):\n",
-    "    try:\n",
-    "        chat_id = message.chat.id\n",
-    "        balcony = message.text\n",
-    "        estate = user_dict[chat_id]\n",
-    "        if (balcony == u'балкон') or (balcony == u'лоджия'):\n",
-    "            estate.balcony = balcony\n",
-    "        else:\n",
-    "            raise Exception()\n",
-    "        markup = types.ReplyKeyboardMarkup(one_time_keyboard=True)\n",
-    "        markup.add('раздельный', 'совмещенный')\n",
-    "        msg = bot.reply_to(message, 'Санузел раздельный или совмещенный?', reply_markup=markup)\n",
-    "        bot.register_next_step_handler(msg, process_year_step)\n",
-    "    except Exception as e:\n",
-    "        bot.reply_to(message, 'Упс!')\n",
-    "\n",
-    "\n",
-    "def process_year_step(message):\n",
-    "    try:\n",
-    "        chat_id = message.chat.id\n",
-    "        bathroom = message.text\n",
-    "        estate = user_dict[chat_id]\n",
-    "        if (bathroom == u'раздельный') or (bathroom == u'совмещенный'):\n",
-    "            estate.bathroom = bathroom\n",
-    "        else:\n",
-    "            raise Exception()\n",
     "        msg = bot.reply_to(message, 'Какого года дом?')\n",
     "        bot.register_next_step_handler(msg, process_ending_step)\n",
     "    except Exception as e:\n",
@@ -177,7 +141,7 @@
     "        chat_id = message.chat.id\n",
     "        year = message.text\n",
     "        if not year.isdigit():\n",
-    "            msg = bot.reply_to(message, 'Этаж должен быть числом. Какой этаж?')\n",
+    "            msg = bot.reply_to(message, 'Год должен быть числом. Какой год?')\n",
     "            bot.register_next_step_handler(msg, process_ending_step)\n",
     "            return\n",
     "        estate = user_dict[chat_id]\n",
@@ -186,11 +150,9 @@
     "        markup.add('Узнать цену')\n",
     "        msg = bot.reply_to(message, f'''Ваши данные по квартире:\n",
     "- количество комнат: {estate.rooms}\n",
-    "- метраж квартиры: {estate.square}\n",
+    "- площадь квартиры: {estate.square}\n",
     "- этаж: {estate.floor}\n",
     "- этажность дома: {estate.max_floor}\n",
-    "- балкон или лоджия: {estate.balcony}\n",
-    "- раздельный или совмещенный санузел: {estate.bathroom}\n",
     "- год постройки дома: {estate.year}''', reply_markup=markup)\n",
     "        bot.register_next_step_handler(msg, predict_price)\n",
     "    except Exception as e:\n",
@@ -206,32 +168,11 @@
     "                       'Area': [float(estate.square)], \n",
     "                       'Floor': [int(estate.floor)], \n",
     "                       'Max_house_floor': [int(estate.max_floor)],\n",
-    "                       'Year_built': [int(estate.year)],\n",
-    "                       'balcony_or_loggia_балкон': [0],\n",
-    "                       'balcony_or_loggia_лоджия': [0],\n",
-    "                       'Bathroom_раздельный': [0],\n",
-    "                       'Bathroom_совмещенный': [0],\n",
-    "                       'low-floor': [0],\n",
-    "                       'middle-floor': [0],\n",
-    "                       'higher_middle-floor': [0],\n",
-    "                       'multi-floor': [0],\n",
-    "                       'higher_multi-floor': [0],\n",
+    "                       'Year_built': [int(estate.year)]\n",
     "                       })\n",
-    "        X_pred = pd.get_dummies(X_pred)\n",
-    "        if estate.bathroom == 'разделенный':\n",
-    "            X_pred['Bathroom_раздельный'] = 1\n",
-    "        else:\n",
-    "            X_pred['Bathroom_совмещенный'] = 1\n",
-    "        if estate.balcony == 'балкон':\n",
-    "            X_pred['balcony_or_loggia_балкон'] = 1\n",
-    "        else:\n",
-    "            X_pred['balcony_or_loggia_лоджия'] = 1\n",
-    "        X_pred['low-floor'] = np.where(X_pred['Max_house_floor'] < 4, 1, 0)\n",
-    "        X_pred['middle-floor'] = np.where((X_pred['Max_house_floor'] > 3) & (X_pred['Max_house_floor'] < 6), 1, 0)\n",
-    "        X_pred['higher_middle-floor'] = np.where((X_pred['Max_house_floor'] > 6) & (X_pred['Max_house_floor'] < 11), 1, 0)\n",
-    "        X_pred['multi-floor'] = np.where((X_pred['Max_house_floor'] > 11) & (X_pred['Max_house_floor'] < 25), 1, 0)\n",
-    "        X_pred['higher_multi-floor'] = np.where(X_pred['Max_house_floor'] > 25, 1, 0)\n",
-    "        price = int(clf.predict(X_pred)[0])\n",
+    "        \n",
+    "        price = int(model_price.predict(X_pred)[0])\n",
+    "        price_if = price\n",
     "        price -= price % -10000\n",
     "        price = str(price)\n",
     "        if len(price) == 7:\n",
@@ -239,24 +180,21 @@
     "        elif len(price) == 8:\n",
     "            price = price[:2] + ' ' + price[1:4] + ' ' + price[4:]\n",
     "        \n",
-    "        neighbors = clf.kneighbors(X_pred, return_distance=False)[0]\n",
+    "        neighbors = model_links.best_estimator_[1].kneighbors(X_pred, return_distance=False)[0]\n",
     "        links = []\n",
     "        for i in neighbors:\n",
-    "            links.append(df.iloc[i, -1])\n",
-    "            \n",
+    "            if ((df.iloc[i, -7] - 900000) < price_if < (df.iloc[i, -7] + 900000)) and (df.iloc[i, -6] == X_pred.iloc[0, 0]):\n",
+    "                links.append(df.iloc[i, -1])\n",
     "        bot.send_message(chat_id, f'''Ориентировочная стоимость вашей квартиры: <b>{price}</b> руб.\n",
     "Похожие объявления:\n",
-    "1 - {links[0]}\n",
-    "2 - {links[1]}\n",
-    "3 - {links[2]}\n",
-    "4 - {links[3]}''', parse_mode='html')\n",
+    "{' '.join(links)}''', parse_mode='html')\n",
     "    except Exception as e:\n",
     "        bot.reply_to(message, 'Упс!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 53,
    "id": "8561ca4e",
    "metadata": {
     "scrolled": false
@@ -265,6 +203,14 @@
    "source": [
     "bot.polling(none_stop=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc299019",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
