--- a/Avito/Parsing and creating df.ipynb
+++ b/Avito/Parsing and creating df.ipynb
@@ -9,6 +9,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74261e37",
+   "metadata": {},
+   "source": [
+    "#### Импорт библиотек\n",
+    "Для парсинга я использовал библиотеки: BeautifulSoup, request и hyper.\n",
+    "\n",
+    "Изначально авито идентифицировал мой request запрос как запрос парсера и выдавал ошибку 403 (доступ запрещен), несмотря на изменение HEADERS и попытки подключения через мобильную сеть. Поэтому использовал hyper.contrib для обхода ошибки 403, такое решение нашел в [интернете](https://qna.habr.com/q/1124028?).\n",
+    "\n",
+    "Для создание датасета использовал библиотеки: Pandas, Numpy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b42c1b72",
@@ -24,6 +37,33 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35ebfa04",
+   "metadata": {},
+   "source": [
+    "#### Обзор веб-страницы\n",
+    "На странице представлены div блоки с объявлением продажи квартиры. На странице представлено около 50 объявлений. С данного div блока можно достать следующую информацию:\n",
+    "- количество комнат;\n",
+    "- площадь;\n",
+    "- этаж и этажность дома;\n",
+    "- цена;\n",
+    "- цена за м<sup>2</sup>\n",
+    "- ссылка на веб-страницу объявления\n",
+    "- адрес\n",
+    "<img src=\"./Images/screen-main.png\" width=\"800\"/>\n",
+    "\n",
+    "#### Обзор веб-страницы объявления\n",
+    "Перейдя по ссылка на объявление, можно достать дополнительную информацию об объекте, но эта информация добавляется пользователем самостоятельно и также некоторые позиции могут быть субъективны, поэтому разные объявления имеют разную дополнительную информацию.\n",
+    "\n",
+    "| first example | second example |\n",
+    "| :---: | :---: |\n",
+    "|![](./Images/screen-inner-1.png)  |  ![](./Images/screen-inner-2.png) |\n",
+    "\n",
+    "#### Отбор данных\n",
+    "Со страницы с объявлениями можно брать все данные, так как они идентичны для каждого объявления. Со страницы объекта недвижимости я решил отобрать объективные и информативные данные, такие как санузел, балкон, год постройки."
    ]
   },
   {
@@ -55,9 +95,6 @@
    },
    "outputs": [],
    "source": [
-    "import time\n",
-    "startTime = time.time()\n",
-    "\n",
     "def main_request(url):\n",
     "    '''Запрос страницы с сайта'''\n",
     "    s = requests.Session()\n",
@@ -76,7 +113,7 @@
     "def select_features(house_data):\n",
     "    '''Добавление признака в соответствующий список'''\n",
     "    count_inner = 0\n",
-    "    while count_inner < 10: #len(house_data)    \n",
+    "    while count_inner < len(house_data): \n",
     "        house = house_data[count_inner]\n",
     "\n",
     "        # Определение стоимости квартиры\n",
@@ -101,6 +138,8 @@
     "        else:                                       # Если заголовок \"квартира-студия\"\n",
     "            rooms.append(1)                         # Если квартира-студия, то пусть комнат будет 1\n",
     "            area = '.'.join(title[1].split(','))\n",
+    "            floor = title[3].split('/')[0]\n",
+    "            max_floor = title[3].split('/')[1]\n",
     "\n",
     "        prices.append(price)\n",
     "        areas.append(area)\n",
@@ -111,9 +150,8 @@
     "        links.append(link)\n",
     "        \n",
     "        # Запрос со страницы объекта недвижимости и отбор признаков\n",
-    "        #delay()\n",
+    "        delay()\n",
     "        house_info = select_blocks(link, page_tag, page_class_name)\n",
-    "        \n",
     "        \n",
     "        bal_or_log = ''\n",
     "        bath = ''\n",
@@ -137,7 +175,6 @@
     "            built_year.append(year)\n",
     "        else:\n",
     "            built_year.append(np.NaN)\n",
-    "        \n",
     "        count_inner += 1\n",
     "        return None\n",
     "        \n",
@@ -156,14 +193,18 @@
     "page_class_name = 'item-params-list-item'\n",
     "count = 1\n",
     "\n",
-    "while count <= 1: \n",
+    "\n",
+    "\n",
+    "while count <= 65: # кол-во страниц с объявлениями\n",
+    "    startTime = time.time()\n",
     "    url = 'https://www.avito.ru/perm/kvartiry/prodam/vtorichka-ASgBAgICAkSSA8YQ5geMUg?context=H4sIAAAAAAAA_0q0MrSqLraysFJKK8rPDUhMT1WyLrYyNLNSKk5NLErOcMsvyg3PTElPLVGyrgUEAAD__xf8iH4tAAAA&p=' + str(count)\n",
     "    select_features(select_blocks(url, main_tag, main_class_name))\n",
-    "    count += 1\n",
-    "\n",
-    "endTime = time.time() \n",
-    "totalTime = endTime - startTime \n",
-    "print(\"Время выполнения блока = \", totalTime)"
+    "    \n",
+    "    endTime = time.time() \n",
+    "    totalTime = endTime - startTime \n",
+    "    print(f'Время выполнения блока {count} = {totalTime:.2f}')\n",
+    "    \n",
+    "    count += 1"
    ]
   },
   {
@@ -189,11 +230,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15200b79",
+   "id": "536d33cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
+    "df.to_csv('database.csv', encoding='utf-8')"
    ]
   }
  ],
