New df + district
Update df to large size, add district to the features. Fix some issues while parsing data.

--- a/Avito/Parsing and creating df.ipynb
+++ b/Avito/Parsing and creating df.ipynb
@@ -18,12 +18,12 @@
     "\n",
     "Изначально авито идентифицировал мой request запрос как запрос парсера и выдавал ошибку 403 (доступ запрещен), несмотря на изменение HEADERS и попытки подключения через мобильную сеть. Поэтому использовал hyper.contrib для обхода ошибки 403, такое решение нашел в [интернете](https://qna.habr.com/q/1124028?).\n",
     "\n",
-    "Для создание датасета использовал библиотеки: Pandas, Numpy"
+    "Для создание датасета использовал библиотеки: Pandas, Numpy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b42c1b72",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "04af8cf4",
    "metadata": {},
    "outputs": [],
@@ -80,6 +80,7 @@
     "areas = []\n",
     "floors = []\n",
     "max_floors = []\n",
+    "districts = []\n",
     "links = []\n",
     "balcony_or_loggia = []\n",
     "bathroom = []\n",
@@ -88,12 +89,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "a43d8146",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Время выполнения блока 1 = 134.74\n",
+      "Время выполнения блока 2 = 135.38\n",
+      "Время выполнения блока 3 = 132.13\n",
+      "Время выполнения блока 4 = 126.08\n",
+      "Время выполнения блока 5 = 131.58\n",
+      "Время выполнения блока 6 = 128.41\n",
+      "Время выполнения блока 7 = 133.58\n",
+      "Время выполнения блока 8 = 136.06\n",
+      "Время выполнения блока 9 = 139.46\n",
+      "Время выполнения блока 10 = 128.99\n",
+      "Время выполнения блока 11 = 126.46\n",
+      "Время выполнения блока 12 = 123.93\n",
+      "Время выполнения блока 13 = 130.52\n",
+      "Время выполнения блока 14 = 135.89\n",
+      "Время выполнения блока 15 = 120.27\n",
+      "Время выполнения блока 16 = 125.38\n",
+      "Время выполнения блока 17 = 131.72\n",
+      "Время выполнения блока 18 = 132.78\n",
+      "Время выполнения блока 19 = 133.79\n",
+      "Время выполнения блока 20 = 137.90\n",
+      "Время выполнения блока 21 = 125.13\n",
+      "Время выполнения блока 22 = 130.68\n",
+      "Время выполнения блока 23 = 127.06\n",
+      "Время выполнения блока 24 = 120.11\n",
+      "Время выполнения блока 25 = 132.99\n",
+      "Время выполнения блока 26 = 122.63\n",
+      "Время выполнения блока 27 = 122.61\n",
+      "Время выполнения блока 28 = 128.00\n",
+      "Время выполнения блока 29 = 124.25\n",
+      "Время выполнения блока 30 = 118.93\n",
+      "Время выполнения блока 31 = 130.69\n",
+      "Время выполнения блока 32 = 131.76\n",
+      "Время выполнения блока 33 = 121.48\n",
+      "Время выполнения блока 34 = 126.87\n",
+      "Время выполнения блока 35 = 131.33\n",
+      "Время выполнения блока 36 = 122.11\n",
+      "Время выполнения блока 37 = 122.57\n",
+      "Время выполнения блока 38 = 119.44\n",
+      "Время выполнения блока 39 = 127.09\n",
+      "Время выполнения блока 40 = 127.42\n",
+      "Время выполнения блока 41 = 129.58\n",
+      "Время выполнения блока 42 = 118.13\n",
+      "Время выполнения блока 43 = 127.88\n",
+      "Время выполнения блока 44 = 122.16\n",
+      "Время выполнения блока 45 = 128.01\n",
+      "Время выполнения блока 46 = 126.04\n",
+      "Время выполнения блока 47 = 121.38\n",
+      "Время выполнения блока 48 = 117.85\n",
+      "Время выполнения блока 49 = 125.71\n",
+      "Время выполнения блока 50 = 124.29\n",
+      "Время выполнения блока 51 = 127.13\n",
+      "Время выполнения блока 52 = 129.16\n",
+      "Время выполнения блока 53 = 116.81\n",
+      "Время выполнения блока 54 = 120.87\n",
+      "Время выполнения блока 55 = 123.55\n",
+      "Время выполнения блока 56 = 126.28\n",
+      "Время выполнения блока 57 = 125.94\n",
+      "Время выполнения блока 58 = 120.08\n",
+      "Время выполнения блока 59 = 123.46\n",
+      "Время выполнения блока 60 = 121.13\n",
+      "Время выполнения блока 61 = 120.37\n",
+      "Время выполнения блока 62 = 130.21\n",
+      "Время выполнения блока 63 = 129.74\n",
+      "Время выполнения блока 64 = 123.32\n",
+      "Время выполнения блока 65 = 127.00\n"
+     ]
+    }
+   ],
    "source": [
     "def main_request(url):\n",
     "    '''Запрос страницы с сайта'''\n",
@@ -113,12 +186,19 @@
     "def select_features(house_data):\n",
     "    '''Добавление признака в соответствующий список'''\n",
     "    count_inner = 0\n",
-    "    while count_inner < len(house_data): \n",
+    "    while count_inner < len(house_data):\n",
     "        house = house_data[count_inner]\n",
     "\n",
     "        # Определение стоимости квартиры\n",
     "        price = house.find('span', {'class': 'price-text-_YGDY text-text-LurtD text-size-s-BxGpL'}).text\n",
     "        price = ''.join(price.split()[:-1])\n",
+    "        \n",
+    "        # Определение района\n",
+    "        try:\n",
+    "            district = house.find('div', {'class': 'geo-georeferences-SEtee text-text-LurtD text-size-s-BxGpL'}).text\n",
+    "            district = district.split()[-1]\n",
+    "        except:\n",
+    "            district = np.NaN\n",
     "\n",
     "        # Сбор строчек с заголовка (кол-во комнат, метраж, этаж)\n",
     "        if house.find('a', {'class': 'link-link-MbQDP link-design-default-_nSbv title-root-zZCwT iva-item-title-py3i_ title-listRedesign-_rejR title-root_maxHeight-X6PsH'}):\n",
@@ -135,15 +215,21 @@
     "            area = '.'.join(title[2].split(','))\n",
     "            floor = title[4].split('/')[0]\n",
     "            max_floor = title[4].split('/')[1]\n",
-    "        else:                                       # Если заголовок \"квартира-студия\"\n",
+    "        elif title[0] == 'Квартира-студия':         # Если заголовок \"квартира-студия\"\n",
     "            rooms.append(1)                         # Если квартира-студия, то пусть комнат будет 1\n",
     "            area = '.'.join(title[1].split(','))\n",
     "            floor = title[3].split('/')[0]\n",
     "            max_floor = title[3].split('/')[1]\n",
+    "        else:\n",
+    "            rooms.append(np.NaN)                         \n",
+    "            area = np.NaN\n",
+    "            floor = np.NaN\n",
+    "            max_floor = np.NaN\n",
     "\n",
     "        prices.append(price)\n",
     "        areas.append(area)\n",
     "        floors.append(floor)\n",
+    "        districts.append(district)\n",
     "        max_floors.append(max_floor)\n",
     "\n",
     "        link = 'https://www.avito.ru' + house.find('a')['href']\n",
@@ -176,7 +262,7 @@
     "        else:\n",
     "            built_year.append(np.NaN)\n",
     "        count_inner += 1\n",
-    "        return None\n",
+    "    return None\n",
     "        \n",
     "def delay():\n",
     "    '''Добавление задержки перед следующим запросом'''\n",
@@ -197,7 +283,8 @@
     "\n",
     "while count <= 65: # кол-во страниц с объявлениями\n",
     "    startTime = time.time()\n",
-    "    url = 'https://www.avito.ru/perm/kvartiry/prodam/vtorichka-ASgBAgICAkSSA8YQ5geMUg?context=H4sIAAAAAAAA_0q0MrSqLraysFJKK8rPDUhMT1WyLrYyNLNSKk5NLErOcMsvyg3PTElPLVGyrgUEAAD__xf8iH4tAAAA&p=' + str(count)\n",
+    "\n",
+    "    url = 'https://www.avito.ru/perm/kvartiry/prodam/vtorichka-ASgBAQICAUSSA8YQAUDmBxSMUg?p=' + str(count)\n",
     "    select_features(select_blocks(url, main_tag, main_class_name))\n",
     "    \n",
     "    endTime = time.time() \n",
@@ -209,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "39b0b389",
    "metadata": {
     "scrolled": true
@@ -224,17 +311,286 @@
     "                   'balcony\\loggia': balcony_or_loggia,\n",
     "                   'Bathroom': bathroom,\n",
     "                   'Year built': built_year,\n",
+    "                   'District': districts,\n",
     "                   'Link': links})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "id": "cdb627ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.avito.ru/perm/kvartiry/kvartira-studiya_264m_25et._2375018527\n",
+      "https://www.avito.ru/perm/kvartiry/2-k._kvartira_503m_89et._2366190019\n",
+      "https://www.avito.ru/perm/kvartiry/2-k._kvartira_431m_89et._2392457137\n",
+      "https://www.avito.ru/perm/kvartiry/3-k._kvartira_95m_416et._2410344283\n",
+      "https://www.avito.ru/perm/kvartiry/2-k._kvartira_415m_816et._2304611968\n",
+      "https://www.avito.ru/perm/kvartiry/1-k._kvartira_306m_55et._2393042901\n",
+      "https://www.avito.ru/perm/kvartiry/2-k._kvartira_60m_1425et._2416858734\n",
+      "https://www.avito.ru/perm/kvartiry/1-k._kvartira_473m_525et._2264732818\n",
+      "https://www.avito.ru/perm/kvartiry/kvartira-studiya_237m_2325et._2404307396\n",
+      "https://www.avito.ru/perm/kvartiry/2-k._kvartira_40m_225et._1995456663\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in df.Link:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "00e3aaa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Rooms</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Floor</th>\n",
+       "      <th>Max_house_floor</th>\n",
+       "      <th>balcony\\loggia</th>\n",
+       "      <th>Bathroom</th>\n",
+       "      <th>Year built</th>\n",
+       "      <th>District</th>\n",
+       "      <th>Link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3250000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>40</td>\n",
+       "      <td>9</td>\n",
+       "      <td>25</td>\n",
+       "      <td>балкон</td>\n",
+       "      <td>совмещенный</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Орджоникидзевский</td>\n",
+       "      <td>https://www.avito.ru/perm/kvartiry/2-k._kvarti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7017200</td>\n",
+       "      <td>2</td>\n",
+       "      <td>58.8</td>\n",
+       "      <td>20</td>\n",
+       "      <td>25</td>\n",
+       "      <td>балкон</td>\n",
+       "      <td>раздельный</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>Индустриальный</td>\n",
+       "      <td>https://www.avito.ru/perm/kvartiry/2-k._kvarti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7600000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>60</td>\n",
+       "      <td>14</td>\n",
+       "      <td>25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>раздельный</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>Свердловский</td>\n",
+       "      <td>https://www.avito.ru/perm/kvartiry/2-k._kvarti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7500000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>95</td>\n",
+       "      <td>4</td>\n",
+       "      <td>16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Дзержинский</td>\n",
+       "      <td>https://www.avito.ru/perm/kvartiry/3-k._kvarti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2399000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>раздельный</td>\n",
+       "      <td>1986</td>\n",
+       "      <td>Свердловский</td>\n",
+       "      <td>https://www.avito.ru/perm/kvartiry/1-k._kvarti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3248</th>\n",
+       "      <td>12000000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>130</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>лоджия</td>\n",
+       "      <td>раздельный</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>Свердловский</td>\n",
+       "      <td>https://www.avito.ru/perm/kvartiry/4-k._kvarti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3249</th>\n",
+       "      <td>3700000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>43.2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>лоджия</td>\n",
+       "      <td>раздельный</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Свердловский</td>\n",
+       "      <td>https://www.avito.ru/perm/kvartiry/2-k._kvarti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3250</th>\n",
+       "      <td>2800000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>57.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>раздельный</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Кировский</td>\n",
+       "      <td>https://www.avito.ru/perm/kvartiry/3-k._kvarti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3251</th>\n",
+       "      <td>4300000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>68</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>балкон</td>\n",
+       "      <td>раздельный</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>Мотовилихинский</td>\n",
+       "      <td>https://www.avito.ru/perm/kvartiry/3-k._kvarti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3252</th>\n",
+       "      <td>4000000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>61.7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>балкон</td>\n",
+       "      <td>раздельный</td>\n",
+       "      <td>1977</td>\n",
+       "      <td>Орджоникидзевский</td>\n",
+       "      <td>https://www.avito.ru/perm/kvartiry/3-k._kvarti...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3253 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Price Rooms  Area Floor Max_house_floor balcony\\loggia     Bathroom  \\\n",
+       "0      3250000     2    40     9              25         балкон  совмещенный   \n",
+       "1      7017200     2  58.8    20              25         балкон   раздельный   \n",
+       "2      7600000     2    60    14              25            NaN   раздельный   \n",
+       "3      7500000     3    95     4              16            NaN          NaN   \n",
+       "4      2399000     1    36     1               9            NaN   раздельный   \n",
+       "...        ...   ...   ...   ...             ...            ...          ...   \n",
+       "3248  12000000     4   130     6               9         лоджия   раздельный   \n",
+       "3249   3700000     2  43.2     7               9         лоджия   раздельный   \n",
+       "3250   2800000     3  57.8     2               4            NaN   раздельный   \n",
+       "3251   4300000     3    68     9              10         балкон   раздельный   \n",
+       "3252   4000000     3  61.7     3               5         балкон   раздельный   \n",
+       "\n",
+       "     Year built           District  \\\n",
+       "0          2016  Орджоникидзевский   \n",
+       "1          2021     Индустриальный   \n",
+       "2          2013       Свердловский   \n",
+       "3           NaN        Дзержинский   \n",
+       "4          1986       Свердловский   \n",
+       "...         ...                ...   \n",
+       "3248       2005       Свердловский   \n",
+       "3249        NaN       Свердловский   \n",
+       "3250        NaN          Кировский   \n",
+       "3251       2000    Мотовилихинский   \n",
+       "3252       1977  Орджоникидзевский   \n",
+       "\n",
+       "                                                   Link  \n",
+       "0     https://www.avito.ru/perm/kvartiry/2-k._kvarti...  \n",
+       "1     https://www.avito.ru/perm/kvartiry/2-k._kvarti...  \n",
+       "2     https://www.avito.ru/perm/kvartiry/2-k._kvarti...  \n",
+       "3     https://www.avito.ru/perm/kvartiry/3-k._kvarti...  \n",
+       "4     https://www.avito.ru/perm/kvartiry/1-k._kvarti...  \n",
+       "...                                                 ...  \n",
+       "3248  https://www.avito.ru/perm/kvartiry/4-k._kvarti...  \n",
+       "3249  https://www.avito.ru/perm/kvartiry/2-k._kvarti...  \n",
+       "3250  https://www.avito.ru/perm/kvartiry/3-k._kvarti...  \n",
+       "3251  https://www.avito.ru/perm/kvartiry/3-k._kvarti...  \n",
+       "3252  https://www.avito.ru/perm/kvartiry/3-k._kvarti...  \n",
+       "\n",
+       "[3253 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "id": "536d33cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('database.csv', encoding='utf-8')"
+    "df.to_csv('database_with_district.csv', encoding='utf-8')"
    ]
   }
  ],
